# sem-web-ontology-project

./: .gitignore  README.md  pyproject.toml
app/: agent.py  app.py  competency_questions_enhanced.py  old-app.py  reload_ontology.py  test_enhanced_queries.py
archive/: COMPETENCY_QUERIES.sparql  COMPETENCY_QUESTIONS.md  ai-ontology copy.rdf  competency_questions.py  elearning_sparql_queries.sparql  reload_ontology.py  test_enhanced_queries.py
docs/: ENHANCED_QUERIES_SUMMARY.md  FINAL_COMPETENCY_RESULTS.md
ontology/: COMPETENCY_QUESTIONS.md  PRACTICAL_COMPETENCY_QUERIES.sparql  ai-ontology.rdf  competency_questions.sparql  elearning_ontology.owl
reports/: query_test_report.json
to_submit/: README.md  app.py  competency_questions.sparql  competency_questions_explained.md  pyproject.toml
to_submit/results/: cq1.csv  cq10.csv  cq2.csv  cq3.csv  cq4.csv  cq5.csv  cq6.csv  cq7.csv  cq8.csv  cq9.csv
