[project]
name = "sem-web-ontology-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Ravindu Weerasinghe",email = "ravindutharuka2001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "streamlit (>=1.54.0,<2.0.0)",
    "sparqlwrapper (>=2.0.0,<3.0.0)",
    "pandas (<3)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
